[package]
edition      = "2024"
name         = "esp32-segment"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-segment"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
embedded-hal = "1"

segment-rs = { git = "https://github.com/alxhill/segment-rs.git" }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

critical-section = "1.2.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
embedded-hal-bus = "0.3.0"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
bytemuck = "1.24.0"
heapless = { version = "0.9.2", features = ["defmt"] }
max170xx = "1.0.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
